[package]
name = "sframe"
version = "0.0.1-dev"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evercrypt = { git = "https://github.com/franziskuskiefer/evercrypt-rust", branch = "master" }
